@@ -1,5 +1,7 @@
 package me.wiefferink.areashop.managers;
 
+import jakarta.inject.Inject;
+import jakarta.inject.Singleton;
 import me.wiefferink.areashop.AreaShop;
 import me.wiefferink.areashop.MessageBridge;
 import me.wiefferink.areashop.features.signs.RegionSign;
@@ -23,8 +25,6 @@ import org.bukkit.event.player.PlayerInteractEvent;
 import org.bukkit.event.player.PlayerQuitEvent;
 import org.bukkit.util.BlockIterator;
 
-import javax.inject.Inject;
-import javax.inject.Singleton;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -111,7 +111,7 @@ public class SignLinkerManager extends Manager implements Listener {
 					Block next = blockIterator.next();
 					List<GeneralRegion> regions = Utils.getRegions(next.getLocation());
 					if(regions.size() == 1) {
-						linker.setRegion(regions.get(0));
+						linker.setRegion(regions.getFirst());
 						return;
 					} else if(regions.size() > 1) {
 						Set<String> names = new HashSet<>();
